--- a/src/pages/Members/Members.css
+++ b/src/pages/Members/Members.css
@@ -86,57 +86,3 @@
     left: 0;
   }
 }
-
-.destinations_img {
-  width:80px;
-  margin:20px;
-  position:static;
-}
-
-.sponsors_img {
-  width: 250px;
-  margin-right: 10px;
-  margin-left: 10px;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  position: static;
-}
-
-@media only screen and (max-width: 800px)  {
-  .destinations_img {
-    margin:15px;
-    width:50px;
-  }
-}
-
-@media only screen and (max-width: 500px)  {
-  .destinations_img {
-    margin:12px;
-    width:35px;
-  }
-}
-
-/* @media only screen and (max-width: 400px)  {
-  #dest_nasajpl {
-    display:none;
-  }
-  #dest_amazon {
-    display:none;
-  }
-  #dest_paypal {
-    display:none;
-  }
-} */
-
-
-#members-destinations-container, #members-sponsor-container {
-  width:70%;
-  max-width:825px;
-  /* display:flex; */
-  /* flex-direction:column; */
-  align-items:center;
-  position: relative;
-  left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%);
-}
